# qurcuma

./: .CLAUDE.md.kate-swp  .gitignore  .gitmodules  AIChangelog.md  CLAUDE.md  CMakeLists.txt  README.md  qt_vtf_test.cpp  resources.qrc  test_vtf_bonds.cpp  test_vtf_frames.cpp  test_vtf_full.cpp  test_vtf_minimal.cpp  test_xyz_parser.cpp  todo.md  vtf_test_qt.cpp
.github/workflows/: build.yml
docs/: README.md  WP-visualization-and-vr.md  WP0-quick3d-spike.md
docs/architecture/: file-parsers.md  performance-optimization.md  rendering-pipeline.md
docs/development/: api-reference.md  phase-timeline.md  visualizer-roadmap.md
spikes/quick3d/: CMakeLists.txt  Main.qml  README.md  REPORT.md  atominstancing.cpp  atominstancing.h  bondinstancing.cpp  bondinstancing.h  main.cpp  moleculedata.cpp  moleculedata.h  scenecontroller.cpp  scenecontroller.h
src/: CLAUDE.md  atominstancing.cpp  atominstancing.h  atominstancingsystem.cpp  atominstancingsystem.h  atomlistpanel.cpp  atomlistpanel.h  bondeditor.cpp  bondeditor.h  bondinstancing.cpp  bondinstancing.h  bondinstancingsystem.cpp  bondinstancingsystem.h  customframegraph.cpp  customframegraph.h  displaypanel.cpp  displaypanel.h  elementdata.cpp  elementdata.h  fileloadingworker.cpp  fileloadingworker.h  forceinjector.cpp  forceinjector.h  forceoverlay.cpp  forceoverlay.h  frequencydialog.h  frustumculler.cpp  frustumculler.h  fullscreenquad.cpp  fullscreenquad.h  imagemetadata.h  lesson.cpp  lesson.h  lessonstructuremodel.cpp  lessonstructuremodel.h  main.cpp  mainwindow.cpp  mainwindow.h  measurementoverlay.cpp  measurementoverlay.h  (+48 more)
src/dialogs/: CLAUDE.md  lessonmetadatadialog.cpp  lessonmetadatadialog.h  nmrcontroller.cpp  nmrcontroller.h  nmrdatastore.cpp  nmrdatastore.h  nmrspectrumdialog.cpp  nmrspectrumdialog.h  nmrstructureproxymodel.cpp  nmrstructureproxymodel.h  rmsddialog.cpp  rmsddialog.h  sftpdialog.cpp  sftpdialog.h  simulationdialog.cpp  simulationdialog.h
src/docks/: CLAUDE.md  atomssimulationdock.cpp  atomssimulationdock.h  bookmarkwidget.cpp  bookmarkwidget.h  displaydock.cpp  displaydock.h  dockconfig.h  dockmanager.cpp  dockmanager.h  editorsdock.cpp  editorsdock.h  navigationdock.cpp  navigationdock.h  outputdock.cpp  outputdock.h  projectdock.cpp  projectdock.h  remotedirectoriespanel.cpp  remotedirectoriespanel.h  simulationdock.cpp  simulationdock.h  workspacepanel.cpp  workspacepanel.h
src/qml/: viewer3d.qml
src/shaders/: atom_instanced.frag  atom_instanced.vert  bloom_bright.frag  bloom_composite.frag  blur_horizontal.frag  blur_vertical.frag  bond_instanced.frag  bond_instanced.vert  pbr.frag  pbr.vert  ssao.frag  ssao.vert  ssao_blur.frag  tonemapping.frag
src/widgets/: breadcrumbbar.cpp  breadcrumbbar.h  collapsiblesection.cpp  collapsiblesection.h  commandpalette.cpp  commandpalette.h  simulationchart.cpp  simulationchart.h  temperatureslider.cpp  temperatureslider.h
stylesheets/: dark.qss  light.qss
